Prevent menu buttons from staying hovered after touch on mobile.
The hover styling was turned on by touch, but then would persist until another touch occurred. It now just styles during the touch, but hover styling still works on non-mobile, probably, I'm not experienced with that @media tag.

--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,9 @@ input[type=range] {
 button {
     color: black;
 }
-button:hover {
+@media (hover: hover){ button:hover {
     filter: brightness(0.8);
-}
+}} /* Prevent hover effect on mobile. */
 button:active {
     filter: brightness(0.7);
 }
